# showkey-one

./: .clang-format  .gitignore  AUTHORS  CREDITS  INSTALL  Makefile.am  Makefile.common  NEWS  README.md  autogen.sh  configure.ac
docs/process/: README.md  howto-compilation.md  howto-contribute.md  howto-pull-request.md  programming-language.md
src/: Makefile.am  showkeyonce.c
